<resources>
    <string name="app_name">GooXpp</string>
    <string name="google_android_map_api_key">AIzaSyB2fMeif-l_2Lv23ydE2NYQAtrlZdmyOy0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="appointment_booked">You have booked an appointment with Dr. Shrey Dhawan on Mon, 9 Jul 2018 at 1:45 AM in Chitra Vihar. Please be on time to save the time of the doctor and lives of people. </string>
    <string name="appointment_fee">Appointment Fee</string>
    <string name="pay_now">Pay Now</string>
    <string name="pay_later">Pay Later</string>
    <string name="i_agree_to_terms_and_conditions">I agree to Terms and Conditions</string>
    <string name="book_appointment">BOOK APPOINTMENT</string>
    <string name="appointment_with">Appointment with</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="age">Age</string>
    <string name="patient_s_name">Patient\'s Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="invite_your_friends">INVITE YOUR FRIENDS</string>
    <string name="invite_code">MAKK4568CA</string>
    <string name="descrip_earn_money">Earn money by referring this app to your friends.Use the referral code and ₹ 500 on per signup.</string>
    <string name="with_invite_code">with invite code</string>
    <string name="invite_using">INVITE USING</string>
    <string name="decrip_you_can_earn">You can earn up to ₹ 2000 this month.</string>
    <string name="share_via_whatsapp">Share via WhatsApp</string>
    <string name="decrip_share_code">Share your code with your WhatsApp groups and friends. Get paid on every signup.</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="or">OR</string>
    <string name="congratulations">Congratulations</string>
    <string name="okay_i_understand">Okay, I understand</string>
    <string name="name_of_doctor">NAME OF DOCTOR</string>
    <string name="book">BOOK</string>
    <string name="call">CALL</string>
    <string name="_500">500</string>
    <string name="_10_years_work_experience">10 years work experience</string>
    <string name="time_of_work">Sun-Sat(10 AM - 5 PM)</string>
    <string name="doctor_location">Chaitra Vihar,Delhi</string>
    <string name="rate">65%(170)</string>
    <string name="degree_of_doctor">MDS</string>
    <string name="doctor_specialtization">Dentist</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="x">X</string>
    <string name="login">Login</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="descrip_please_enter_otp">Please enter OTP sent to +91 92******69</string>
    <string name="not_my_account">Not my account</string>
    <string name="_0">0</string>
    <string name="get_a_call">Get a call</string>
    <string name="didn_t_recieved_otp">Didn\'t received OTP?</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">Android Studio</string>
    <string name="user_email">android.studio@android.com</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="appointments">Appointments</string>
    <string name="notifications">Notifications</string>
    <string name="about_goxp">About GoXP</string>
    <string name="support">Support</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="logout">Logout</string>
    <string name="book_an_appointment">Book An Appointment</string>
    <string name="cards">Cards</string>
    <string name="dashboard">Dashboard</string>
    <string name="modules">Modules</string>
    <string name="enterphonenumber">Enter your phone number</string>
    <string name="verified">Verification successful</string>
    <string name="failed">Verification failed</string>
    <string name="current_lat_lang">Current Lat/Lang</string>
    <string name="Doctor_name">Dr Shrey Dhawan</string>
    <string name="dentist">Dentist</string>
    <string name="dp">dp</string>
    <string name="facebook_app_id">1039105619577375</string>
    <string name="sendotp_key">222726AVyhX30Cnpch5b33136a</string>
    <string name="sms_verification">SMS Verification</string>
    <string name="sending_sms">Sending SMS</string>
    <string name="enter_number">Enter Number</string>
    <string name="_46123456789">+46123456789</string>
    <string name="enter">Enter</string>
    <string name="resend_via_call">Resend via call ()</string>
    <string name="in_progerss">In Progerss</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_doctor_profile">DoctorProfile</string>
    <string name="doctor_descrip">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Luctus venenatis lectus magna fringilla urna porttitor. In hendrerit gravida rutrum quisque non tellus orci ac auctor. Viverra nibh cras pulvinar mattis. Vulputate odio ut enim blandit. Convallis posuere morbi leo urna molestie at elementum. Tincidunt eget nullam non nisi est sit amet facilisis. Luctus venenatis lectus magna fringilla urna porttitor.</string>
    <string name="facilities">Facilities</string>
    <string name="facility_1">Facility 1</string>
    <string name="facility_2">Facility 2</string>
    <string name="facility_3">Facility 3</string>
    <string name="facility_4">Facility 4</string>
    <string name="facility_5">Facility 5</string>
    <string name="facility_6">Facility 6</string>
    <string name="facility_7">Facility 7</string>
    <string name="facility_8">Facility 8</string>
    <string name="facility_9">Facility 9</string>
    <string name="expert_reviews">Expert Reviews</string>
    <string name="_4_5_stars">4.5 Stars</string>
    <string name="location">Location</string>
</resources>