<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/search"
            android:title="@string/search" />
        <item
            android:id="@+id/appointments"
            android:icon="@drawable/portrait"
            android:title="@string/appointments" />
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/aboutGoXP"
            android:icon="@drawable/about"
            android:title="@string/about_goxp" />
        <item
            android:id="@+id/support"
            android:icon="@drawable/info"
            android:title="@string/support" />
        <item
            android:id="@+id/referafriend"
            android:icon="@drawable/baseline_people_24"
            android:title="@string/refer_a_friend" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
    <item android:title="@string/modules">
        <menu>
            <item
                android:id="@+id/book_an_appointment"
                android:title="@string/book_an_appointment" />
            <item
                android:id="@+id/Msg91"
                android:title="Msg91 OTP Verification" />
            <item
                android:id="@+id/lat_lang"
                android:title="@string/current_lat_lang" />
            <item
                android:id="@+id/otp"
                android:title="OTP Fragment" />
            <item
                android:id="@+id/card"
                android:title="@string/cards" />
            <item
                android:id="@+id/sign_up"
                android:title="Sign Up Fragment" />
            <item
                android:id="@+id/login"
                android:title="Login Fragment" />
            <item
                android:id="@+id/invite_and_earn"
                android:title="Invite And Earn Fragment" />
            <item
                android:id="@+id/dashboard"
                android:title="@string/dashboard" />

        </menu>
    </item>
</menu>
