<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.acer.gooxpp.Activity.DoctorProfile"
    tools:showIn="@layout/activity_doctor_profile">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/descrip"
            android:shadowColor="#000000"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/loginlayout"
            android:layout_margin="@dimen/_8sdp"
            android:textSize="@dimen/_12sdp"
            android:padding="@dimen/_8sdp"
            android:fontFamily="sans-serif"
            android:text="@string/doctor_descrip" />

        <TextView
            android:id="@+id/facilities"
            android:layout_below="@id/descrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#29000000"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:textSize="@dimen/_20sdp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:layout_marginLeft="@dimen/_12sdp"
            android:textColor="#424443"
            android:text="@string/facilities"/>
        <LinearLayout
            android:id="@+id/facility_layout"
            android:layout_below="@id/facilities"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/loginlayout"
            android:layout_margin="@dimen/_10sdp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_height="match_parent">
                <CheckBox
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/facility_1"
                    android:textSize="@dimen/_14sdp"/>

                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facility_2"
                    android:textSize="@dimen/_14sdp"/>
                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facility_3"
                    android:textSize="@dimen/_14sdp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_15sdp"
                android:paddingTop="@dimen/_15sdp"
                android:layout_height="match_parent">
                <CheckBox
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/facility_4"
                    android:textSize="@dimen/_14sdp"/>

                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facility_5"
                    android:textSize="@dimen/_14sdp"/>
                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facility_6"
                    android:textSize="@dimen/_14sdp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_10sdp"
                android:layout_height="match_parent">
                <CheckBox
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/facility_7"
                    android:textSize="@dimen/_14sdp"/>

                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facility_8"
                    android:textSize="@dimen/_14sdp"/>
                <CheckBox
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facility_9"
                    android:textSize="@dimen/_14sdp"/>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/exper_rivew"
            android:layout_below="@id/facility_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#29000000"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:textSize="@dimen/_20sdp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:layout_marginLeft="@dimen/_12sdp"
            android:textColor="#424443"
            android:text="@string/expert_reviews"/>
        <LinearLayout
            android:id="@+id/rating_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_below="@id/exper_rivew"

            android:background="@drawable/loginlayout"
            android:layout_margin="@dimen/_10sdp">
            <RatingBar
                android:id="@+id/ratinBar"
                android:layout_width="wrap_content"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                style="?android:attr/ratingBarStyleIndicator"
                android:rating="2.5"
                android:theme="@style/RatingBar"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#9e000000"
                android:shadowDy="3"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_40sdp"
                android:shadowRadius="6"

                android:textSize="@dimen/_15sdp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="#3a3a3a"
                android:lineSpacingExtra="1.5sp"
                android:text="@string/_4_5_stars"/>
        </LinearLayout>
        <TextView
            android:id="@+id/location"
            android:layout_below="@id/rating_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#29000000"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:textSize="@dimen/_20sdp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:layout_marginLeft="@dimen/_12sdp"
            android:textColor="#424443"
            android:text="@string/location"/>

        <RelativeLayout
            android:id="@+id/map_layout"
            android:layout_below="@id/location"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_height="@dimen/_220sdp"
            android:background="@drawable/loginlayout"
            android:orientation="vertical">

            <fragment
                android:layout_margin="@dimen/_4sdp"
                android:id="@+id/fragment"
                android:name="com.example.acer.gooxpp.Activity.Map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_below="@id/map_layout"
            android:layout_height="@dimen/_90sdp"/>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
