<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#f3f2f2"
    android:layout_height="match_parent"
    tools:context="com.example.acer.gooxpp.InviteAndEarn">
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/inviteyourfriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#de000000"
            android:textSize="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/invite_your_friends"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/with_invite_code"
            android:textColor="#8c000000"
            android:layout_marginTop="@dimen/_7sdp"
            android:textSize="@dimen/_18sdp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:padding="3dp"
            android:background="#e4e4e4"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="@dimen/_126sdp"
                android:layout_height="@dimen/_39sdp"
                android:shadowRadius="6"
                android:shadowDy="3"
                android:textColor="#ff4e00"
                android:background="@color/white"
                android:text="@string/invite_code"
                android:shadowColor="#29000000"
                android:textSize="@dimen/_17sdp" />
            <ImageView
                android:id="@+id/copy"
                android:layout_width="@dimen/_39sdp"
                android:background="#a2a2a2"
                android:src="@drawable/copy"
                android:padding="5dp"
                android:layout_height="@dimen/_39sdp" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:paddingTop="@dimen/_12sdp"
            android:paddingRight="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingLeft="@dimen/_17sdp"
            android:paddingStart="@dimen/_17sdp"
            android:fontFamily="sans-serif"
            android:shadowColor="#29000000"
            android:textColor="#ba000000"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:paddingBottom="@dimen/_20sdp"
            android:text="@string/descrip_earn_money"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_using"
        android:textSize="@dimen/_11sdp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:textColor="#61000000"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="@dimen/_17sdp"
        android:layout_marginRight="@dimen/_17sdp"
        android:background="@drawable/layout_in_refer_and_earn"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:paddingTop="@dimen/_12sdp"
            android:paddingRight="@dimen/_17sdp"
            android:paddingLeft="@dimen/_17sdp"
            android:fontFamily="sans-serif"
            android:shadowColor="#29000000"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:shadowDy="3"
            android:shadowRadius="6"
            android:text="@string/decrip_you_can_earn"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="@dimen/_252sdp"
            android:layout_height="@dimen/_46sdp"
            android:background="#0f9d58"
            android:text="@string/share_via_whatsapp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="#ffffff"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="sans-serif"
            android:shadowColor="#29000000"
            android:layout_gravity="center"
            android:textColor="#ba000000"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:textAlignment="center"
            android:shadowDy="4"
            android:shadowRadius="6"
            android:text="@string/decrip_share_code"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_12sdp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:background="#ba000000"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:layout_height=".5dp">
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:padding="@dimen/_5sdp"
                android:fontFamily="sans-serif"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:textColor="#c7000000"
                android:textSize="@dimen/_14sdp"/>

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="sans-serif"
            android:shadowColor="#29000000"
            android:textColor="#ba000000"
            android:paddingLeft="@dimen/_17sdp"
            android:paddingRight="@dimen/_17sdp"
            android:paddingStart="@dimen/_17sdp"
            android:paddingEnd="@dimen/_17sdp"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:shadowDy="4"
            android:shadowRadius="6"
            android:text="@string/scan_qr_code"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_12sdp"/>
    </LinearLayout>
</LinearLayout>
