<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#fbfbfb"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/congratulationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/booked">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_25sdp"
            android:padding="@dimen/_20sdp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_70sdp"
            android:fontFamily="sans-serif"
            android:text="@string/congratulations"/>
    </RelativeLayout>
    <TextView
        android:layout_marginTop="@dimen/_15sdp"
        android:id="@+id/bookingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#8a000000"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_8sdp"
        android:layout_below="@+id/congratulationLayout"
        android:text="@string/appointment_booked"/>

    <TextView
        android:id="@+id/iUnderstand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@id/bookingText"
        android:textStyle="normal"
        android:textColor="#7d57c0"
        android:lineSpacingExtra="@dimen/_2sdp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:textSize="@dimen/_14sdp"
        android:text="@string/okay_i_understand"/>
        </RelativeLayout>

